# wingpanel-indicator-dark-style

./: README.md  meson.build
.github/workflows/: main.yml
data/: darkstyle.appdata.xml.in  meson.build
po/: POTFILES  darkstyle-indicator.pot
po/extra/: POTFILES  extra.pot
src/: Indicator.vala
src/Services/: AccountsService.vala  PrefersColorScheme.vala
src/Widgets/: Popover.vala
